feat: added a new handle for viewing the feed of subscribers' posts + minor fixes
